# LocalFlow

./: .gitignore  README.md  create_icon.py  forge.config.ts  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
src/: MainWindow.tsx  app.tsx  central-preload.ts  central_preload.ts  index.html  index.ts  input.css  output.css  preload.ts
src-py/: __main__.py  alternative_loading.py  compressor.py  controller.py  database.py  formatter.py  main.py  models.py  recorder.py  requirements.txt  transcriber.py
src-py/api/: __init__.py  ipc.py
src-py/core/: __init__.py  controller.py  workflow.py
src-py/models/: __init__.py  channels.py  commands.py  db.py  exceptions.py  messages.py
src-py/services/: __init__.py
src-py/services/ai/: __init__.py  formatter.py  prompt.py  transcriber.py
src-py/services/audio/: __init__.py  compressor.py  (+1 more)
src-py/utils/: __init__.py  environment.py  ipc.py  logging.py  model_utils.py  paths.py  utils.py
src/components/: ModeDetails.tsx  ModeSpecificTextReplacements.tsx  PromptDetails.tsx  SpeechVocalization.tsx  app-sidebar.tsx  combobox.tsx  error-boundary.tsx  shortcut.tsx
src/hooks/: use-locale.tsx  use-settings.tsx
src/lib/: hooks.ts  models.ts  utils.ts
src/main-window/: Credits.tsx  History.tsx  MainWindow.tsx  Settings.tsx  Status.tsx  app.tsx  index.html  preload.ts
src/mini/: app.tsx  index.html  preload.ts
src/recording-history/: HistoryWindow.tsx  app.tsx  index.html  preload.ts
src/startup/: app.tsx  index.html
src/stores/: audio-store.ts  config-store.ts  history-store.ts  mode-store.ts
(+44 files in other folders)
